OO-5926: select tab item instead of looping...