@@ -91,12 +91,12 @@ public class PortfolioCourseNodeEditController extends ActivateableTabbableDefau
 	// if there is already user data available, make for read only
 		UserNodeAuditManager am = course.getCourseEnvironment().getAuditManager();
 		hasLogEntries = am.hasUserNodeLogs(node);
-		configContent.contextPut("hasLogEntries", new Boolean(hasLogEntries));
+		configContent.contextPut("hasLogEntries", Boolean.valueOf(hasLogEntries));
 		if (hasLogEntries) {
 			scoringController.setDisplayOnly(true);
 		}
 		//Initialstate
-		configContent.contextPut("isOverwriting", new Boolean(false));
+		configContent.contextPut("isOverwriting", Boolean.valueOf(false));
 	}
 	
 	public static boolean isModuleConfigValid(ModuleConfiguration moduleConfiguration) {
@@ -132,8 +132,7 @@ public class PortfolioCourseNodeEditController extends ActivateableTabbableDefau
 			if (event == Event.CANCELLED_EVENT) {
 				if (hasLogEntries) {
 					scoringController.setDisplayOnly(true);}
-				configContent.contextPut("isOverwriting", new Boolean(false));
-				return;				
+				configContent.contextPut("isOverwriting", Boolean.valueOf(false));			
 			} else if (event == Event.DONE_EVENT){
 				scoringController.updateModuleConfiguration(config);
 				updateHighscoreTab();
@@ -155,9 +154,9 @@ public class PortfolioCourseNodeEditController extends ActivateableTabbableDefau
 	@Override
 	public void addTabs(TabbedPane tabbedPane) {
 		myTabbedPane = tabbedPane;
-		tabbedPane.addTab(translate(PANE_TAB_CONFIG), configContent);
-		tabbedPane.addTab(translate(PANE_TAB_SCORING), scoringContent);
-		tabbedPane.addTab(translate(PANE_TAB_HIGHSCORE) , highScoreNodeConfigController.getInitialComponent());
+		tabbedPane.addTab(translate(PANE_TAB_CONFIG), "o_sel_repo_entry", configContent);
+		tabbedPane.addTab(translate(PANE_TAB_SCORING), "o_sel_portfolio_assessment", scoringContent);
+		tabbedPane.addTab(translate(PANE_TAB_HIGHSCORE), highScoreNodeConfigController.getInitialComponent());
 		updateHighscoreTab();
 	}
 
